# tide

./: .envrc  .gitignore  flake.nix  pyproject.toml
src/tide/: __init__.py  api.py  inky.py  main.py  plot.py  utils.py
