[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "inky",
  "matplotlib",
  "numpy",
  "pillow",
  "requests"
]

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'armv6l'"
]
package = true
